cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This CloudFormation Template was written for running Kittens Carousel Static Website on EC2. Kittens Carousel Static Website will be deployed on Amazon Linux 2 (XXXXXXXXXXXX) EC2 Instance with custom security group which allows http connections on port 80 and ssh port 22 from anywhere. Kittens Carousel Static Website 
  is downloaded from my Public Github repository, then deployed on Apache Web Server. Rihanna says Work! Work! Work!
Parameters:
  
Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server and SSH for secure connection # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-04a0ae173da5807d3
      InstanceType: t2.micro
      KeyName: ssh-key
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      Tags:
        -                        
          Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: 
        Fn::Base64: |
            #! /bin/bash
            yum update -y
            yum install httpd -y
            FOLDER="https://github.com/Alfred-Dreyfus/portfolio-web.git"
            cd /var/www/html
            wget ${FOLDER}/index.html
            wget ${FOLDER}/style.css
            wget ${FOLDER}/bg1.jpg
            wget ${FOLDER}/bg2.jpg
            wget ${FOLDER}/bg3.jpg
            wget ${FOLDER}/bg4.jpg
            wget ${FOLDER}/erdem.png
            wget ${FOLDER}/logo.jpeg
            systemctl start httpd
            systemctl enable httpd

Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Kittens Carousel Application URL
